feat: Integrantes do grupo

--- a/PROJETO.ipynb
+++ b/PROJETO.ipynb
@@ -11,6 +11,16 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Integrantes do grupo\n",
+        "\n",
+        "- [Ian Cordibello Desponds](https://github.com/iancdesponds)\n",
+        "- [Luigi Orlandi Quinze](https://github.com/guizin-15)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "j3A7sF3Vu1Js"
       },
@@ -297,7 +307,7 @@
         "id": "Sy51EtvS3LD3"
       },
       "source": [
-        "**PROJETO I - DATA DE ENTREGA: 06 ABRIL 2024**"
+        "**PROJETO I - DATA DE ENTREGA: 21 ABRIL 2024**"
       ]
     },
     {
