feat: repositório do projeto

--- a/PROJETO.ipynb
+++ b/PROJETO.ipynb
@@ -16,7 +16,9 @@
         "# Integrantes do grupo\n",
         "\n",
         "- [Ian Cordibello Desponds](https://github.com/iancdesponds)\n",
-        "- [Luigi Orlandi Quinze](https://github.com/guizin-15)"
+        "- [Luigi Orlandi Quinze](https://github.com/guizin-15)\n",
+        "\n",
+        "Repostritório do projeto: [Projeto I - Lógica e Matemática Discreta](https://github.com/iancdesponds/mat-disc-proj-1-ian-guizin)"
       ]
     },
     {
